# ecoproof-icp

./: .gitignore  Cargo.toml  README.md  deploy.sh  deploy_playground.sh  dfx.json  setup_weather_api.sh  test_insert.sh
.dfx/local/: canister_ids.json  network-id
data/: gfw.py  meteomatics.py  noaa.py  nubila.py  open_weather.py
src/dao_backend/: Cargo.toml  dao_backend.did  lib.rs
src/dao_backend/src/: lib.rs
src/declarations/dao_backend/: dao_backend.did  dao_backend.did.d.ts  dao_backend.did.js
src/declarations/ecoproof-icp-backend/: index.d.ts  index.js
src/declarations/https_outbound_canister/: https_outbound_canister.did  https_outbound_canister.did.d.ts  https_outbound_canister.did.js  index.d.ts  index.js
src/ecoproof-icp-backend/: Cargo.toml
src/ecoproof-icp-backend/src/: lib.rs
src/https_outbound_canister/: Cargo.toml  https_outbound_canister.did
src/https_outbound_canister/src/: lib.rs
src/icrc1_ledger_canister/: Cargo.toml  deploy-args.did  dfx.json
src/icrc1_ledger_canister/src/icrc1_ledger_canister_frontend/: vite.config.js
