[package]
name = "icrc1_ledger_canister"
version = "0.1.0"
edition = "2021"

[lib]
name = "icrc1_ledger_canister"
path = "src/lib.rs"  # Make sure the path is correct
crate-type = ["cdylib"]

[dependencies]
ic-cdk = "0.13"  # Upgrade to the latest version
ic-cdk-macros = "0.13"
candid = "0.8"
serde = "1.0"
serde_cbor = "0.11.2"
serde_json = "1.0"
serde_bytes = "0.11"
ic-stable-structures = "0.5.1"

[build-dependencies]
ic-cdk-optimizer = "0.3"  # Helps reduce WASM size
